--- a/src/index.scss
+++ b/src/index.scss
@@ -4,9 +4,22 @@
     // White: hsl(0, 0%, 100%)
     --col-1st   : 0, 0%;
     --col-1st-1 : hsl(var(--col-1st), 87%);
+    --col-1st-2 : hsl(var(--col-1st), 10%);
+    --col-1st-3 : hsla(var(--col-1st), 100%, .035);
     // Dark Blue Grey: hsl(220, 13%, 18%)
     --col-2nd   : 220;
     --col-2nd-1 : hsl(var(--col-2nd), 13%, 15%);
+    // Purple: hsl(291, 100%, 49%)
+    --col-3rd   : 291;
+    --col-3rd-1 : hsl(var(--col-3rd), 100%, 49%);
+    --col-3rd-2 : hsl(var(--col-3rd), 100%, 78%);
+    --col-3rd-3 : hsl(var(--col-3rd), 100%, 54%);
+    // Green: hsl(93, 98%, 35%)
+    --col-4th   : 93;
+    --col-4th-1 : hsl(var(--col-4th), 98%, 30%);
+    // Dark Red: hsl(349, 84%, 53%)
+    --col-5th   : 349;
+    --col-5th-1 : hsl(var(--col-5th), 84%, 43%);
 }
 html {
     background-color: var(--col-2nd-1);
