--- a/src/components/forms/Form.module.css
+++ b/src/components/forms/Form.module.css
@@ -1,1 +1,1 @@
-.Form{padding:1rem}
+.Form{padding:1.5rem;border-radius:1rem;-webkit-box-shadow:0 0.2rem 0.8rem var(--col-1st-6) inset,0 -0.2rem 0.8rem var(--col-1st-6) inset;box-shadow:0 0.2rem 0.8rem var(--col-1st-6) inset,0 -0.2rem 0.8rem var(--col-1st-6) inset}
