--- a/src/components/forms/Form.module.scss
+++ b/src/components/forms/Form.module.scss
@@ -1,3 +1,6 @@
 .Form {
-    padding: 1rem;
+    padding: 1.5rem;
+    border-radius: 1rem;
+    box-shadow: 0 .2rem .8rem var(--col-1st-6) inset,
+                0 -.2rem .8rem var(--col-1st-6) inset;
 }
