--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,9 @@
     --col-1st-1 : hsl(var(--col-1st), 87%);
     --col-1st-2 : hsl(var(--col-1st), 10%);
     --col-1st-3 : hsla(var(--col-1st), 100%, .035);
+    --col-1st-4 : hsl(var(--col-1st), 53%);
+    --col-1st-5 : hsl(var(--col-1st), 100%);
+    --col-1st-6 : hsla(var(--col-1st), 0%, .75);
     // Dark Blue Grey: hsl(220, 13%, 18%)
     --col-2nd   : 220;
     --col-2nd-1 : hsl(var(--col-2nd), 13%, 15%);
