--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,7 @@
     // Dark Blue Grey: hsl(220, 13%, 18%)
     --col-2nd   : 220;
     --col-2nd-1 : hsl(var(--col-2nd), 13%, 15%);
+    --col-2nd-2 : hsl(var(--col-2nd), 13%, 30%);
     // Purple: hsl(291, 100%, 49%)
     --col-3rd   : 291;
     --col-3rd-1 : hsl(var(--col-3rd), 100%, 49%);
