--- a/src/components/rdrive/Folder.module.scss
+++ b/src/components/rdrive/Folder.module.scss
@@ -1,6 +1,6 @@
 .Folder {
     padding: 1rem;
-    margin: 1rem;
+    margin: 1rem 2rem;
     border-radius: .5rem;
     border: .2rem solid var(--col-2nd-2);
     display: block;
