--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 2rem;
+    padding: 2rem 2.4rem;
 
     & .btns button:first-child {
         margin-right: 1rem;
