File Upload Progress Component...

--- a/src/index.scss
+++ b/src/index.scss
@@ -20,6 +20,8 @@
     --col-2nd   : 220;
     --col-2nd-1 : hsl(var(--col-2nd), 13%, 12%);
     --col-2nd-2 : hsl(var(--col-2nd), 13%, 27%);
+    --col-2nd-3 : hsl(var(--col-2nd), 13%, 22%);
+    --col-2nd-4 : hsl(var(--col-2nd), 13%, 32%);
     // Purple: hsl(291, 100%, 49%)
     --col-3rd   : 291;
     --col-3rd-1 : hsl(var(--col-3rd), 100%, 49%);
