--- a/src/index.scss
+++ b/src/index.scss
@@ -30,6 +30,7 @@
     --col-3rd-4 : hsl(var(--col-3rd), 100%, 39%);
     --col-3rd-5 : hsl(var(--col-3rd), 100%, 29%);
     --col-3rd-6 : hsl(var(--col-3rd), 100%, 64%);
+    --col-3rd-7 : hsl(var(--col-3rd), 100%, 19%);
     // Green: hsl(93, 98%, 35%)
     --col-4th   : 93;
     --col-4th-1 : hsl(var(--col-4th), 98%, 30%);
