--- a/src/components/rdrive/File.module.scss
+++ b/src/components/rdrive/File.module.scss
@@ -18,13 +18,17 @@
     }
     & .w-60 {
         display: block;
-        width: 60%;
+        width: 100%;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
         
         & svg {
             margin-right: .5rem;
+        }
+
+        @media only screen and (min-width: 500px) {
+            width: 60%;
         }
     }
     & .w-20 {
