--- a/src/components/layouts/Toast.module.scss
+++ b/src/components/layouts/Toast.module.scss
@@ -1,7 +1,7 @@
 .Toast {
     z-index: 1;
     position: fixed;
-    bottom: 2rem;
+    bottom: 6rem;
     right: 2rem;
     width: 12rem;
     font-size: 1.2rem;
@@ -39,5 +39,9 @@
                 transform: translate(-50%, -50%);
             }
         }
+    }
+
+    @media only screen and (min-width: 600px) {
+        bottom: 2rem
     }
 }
