Minor toast style fix

--- a/src/components/layouts/Toast.module.scss
+++ b/src/components/layouts/Toast.module.scss
@@ -1,7 +1,7 @@
 .Toast {
     z-index: 1;
     position: fixed;
-    bottom: 6rem;
+    bottom: 10rem;
     right: 2rem;
     width: 12rem;
     font-size: 1.2rem;
@@ -41,7 +41,7 @@
         }
     }
 
-    @media only screen and (min-width: 600px) {
-        bottom: 2rem
+    @media only screen and (min-width: 600px ) and (min-height: 600px) {
+        bottom: 2rem;
     }
 }
