Minor toast style fix

--- a/src/components/layouts/Toast.module.scss
+++ b/src/components/layouts/Toast.module.scss
@@ -1,8 +1,9 @@
 .Toast {
     z-index: 1;
     position: fixed;
-    bottom: 10rem;
+    bottom: 50%;
     right: 2rem;
+    transform: translateY(50%);
     width: 12rem;
     font-size: 1.2rem;
     background-color: var(--col-2nd-3);
@@ -43,5 +44,6 @@
 
     @media only screen and (min-width: 600px ) and (min-height: 600px) {
         bottom: 2rem;
+        transform: none;
     }
 }
