--- a/src/components/layouts/Modal.module.scss
+++ b/src/components/layouts/Modal.module.scss
@@ -6,7 +6,7 @@
     width: 100%;
     height: 100vh;
     background-color: var(--col-1st-9);
-    padding: 15% 10%;
+    padding: 10%;
 
     & .content {
         background-color: var(--col-1st-2);
@@ -95,7 +95,7 @@
         }
     }
 
-    @media only screen and (min-width: 600px) {
+    @media only screen and (min-width: 600px) and (min-height: 600px) {
         padding: 15% 20%;
     }
 }
