--- a/src/index.scss
+++ b/src/index.scss
@@ -37,6 +37,10 @@
     // Dark Red: hsl(349, 84%, 53%)
     --col-5th   : 349;
     --col-5th-1 : hsl(var(--col-5th), 84%, 43%);
+    --col-5th-2 : hsl(var(--col-5th), 84%, 5%);
+    --col-5th-3 : hsl(var(--col-5th), 61%, 60%);
+    --col-5th-4 : hsl(var(--col-5th), 61%, 75%);
+    --col-5th-5 : hsl(var(--col-5th), 61%, 12%);
 }
 html {
     background-color: var(--col-2nd-1);
