--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,1 +1,1 @@
-.container{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding:2rem 2.4rem}.container .btns button:first-child{margin-right:1rem}
+.container{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding:2rem 2.4rem}.container .btns button{margin-right:1rem}
