--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -4,7 +4,7 @@
     align-items: center;
     padding: 2rem 2.4rem;
 
-    & .btns button:first-child {
+    & .btns button {
         margin-right: 1rem;
     }
 }
