--- a/src/index.scss
+++ b/src/index.scss
@@ -65,6 +65,7 @@ body {
     font-size: 1.6rem;
     font-family: 'Poppins', sans-serif;
     letter-spacing: .1rem;
+    -webkit-touch-callout: none; // Prevents default context menu on long touch on mobile devices
 }
 *,
 *::before,
