--- a/src/components/rdrive/FileFolder.module.scss
+++ b/src/components/rdrive/FileFolder.module.scss
@@ -1,4 +1,4 @@
-.File {
+.FileFolder {
     padding: .8rem;
     margin: 1rem 2.4rem;
     border-radius: .5rem;
@@ -8,6 +8,7 @@
     font-size: 1.3rem;
     text-decoration: none;
     transition: .2s;
+    -webkit-touch-callout: none; // Prevents default context menu on long touch on mobile devices
 
     &:focus,
     &:hover {
