--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
 
 :root {
     --NavHeight : 5rem;
+    --CopyrightHeight: 3rem;
     // White: hsl(0, 0%, 100%)
     --col-1st   : 0, 0%;
     --col-1st-1 : hsl(var(--col-1st), 87%);
