--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -1,10 +1,14 @@
-.container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2rem 2.4rem;
-
-    & .btns button {
-        margin-right: 1rem;
+.Home {
+    min-height: calc(100vh - var(--CopyrightHeight));
+    
+    .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 2rem 2.4rem;
+    
+        & .btns button {
+            margin-right: 1rem;
+        }
     }
 }
