--- a/src/components/rdrive/AddFolderButton.module.css
+++ b/src/components/rdrive/AddFolderButton.module.css
@@ -1,1 +1,1 @@
-.AddFolder{background:none;cursor:pointer;color:inherit;font-size:2rem;padding:.8rem;border:.2rem solid currentColor;border-radius:.4rem;-webkit-transition:.2s;transition:.2s}.AddFolder:focus,.AddFolder:hover{color:var(--col-3rd-2)}
+.AddFolder{background:none;cursor:pointer;color:inherit;font-size:2rem;padding:.8rem;border:.2rem solid currentColor;border-radius:.4rem;transition:.2s}.AddFolder:focus,.AddFolder:hover{color:var(--col-3rd-2)}
