--- a/src/components/forms/ButtonGroup.module.css
+++ b/src/components/forms/ButtonGroup.module.css
@@ -1,1 +1,1 @@
-.ButtonGroup{margin-top:1rem;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;-ms-flex-wrap:wrap;flex-wrap:wrap}
+.ButtonGroup{margin-top:1rem;display:flex;justify-content:space-between;flex-wrap:wrap}
