--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -1,5 +1,5 @@
 .Home {
-    min-height: calc(100vh - var(--CopyrightHeight));
+    min-height: 100vh;
     
     .container {
         display: flex;
