--- a/src/components/forms/Form.module.css
+++ b/src/components/forms/Form.module.css
@@ -1,1 +1,1 @@
-.Form{padding:1.5rem;border-radius:1rem;box-shadow:0 .2rem .8rem var(--col-1st-6) inset,0 -0.2rem .8rem var(--col-1st-6) inset}
+.Form{padding:2rem;border-radius:1rem;background-color:rgba(33,33,33,.667);box-shadow:0 .2rem .8rem var(--col-1st-6) inset,0 -0.2rem .8rem var(--col-1st-6) inset}
