--- a/src/components/forms/Form.module.scss
+++ b/src/components/forms/Form.module.scss
@@ -1,6 +1,7 @@
 .Form {
-    padding: 1.5rem;
+    padding: 2rem;
     border-radius: 1rem;
+    background-color: hsla(0, 0%, 13%, 0.667);
     box-shadow: 0 .2rem .8rem var(--col-1st-6) inset,
                 0 -.2rem .8rem var(--col-1st-6) inset;
 }
