Fixed responsive styling issues

--- a/src/components/forms/Form.module.scss
+++ b/src/components/forms/Form.module.scss
@@ -2,6 +2,7 @@
     padding: 2rem;
     border-radius: 1rem;
     background-color: hsla(0, 0%, 13%, 0.667);
+    margin-bottom: 2rem;
     box-shadow: 0 .2rem .8rem var(--col-1st-6) inset,
                 0 -.2rem .8rem var(--col-1st-6) inset;
 }
