--- a/src/components/layouts/Layout.module.scss
+++ b/src/components/layouts/Layout.module.scss
@@ -1,10 +1,9 @@
 .Layout {
-    height: 100vh;
-    
     .main {
         position: relative;
-        height: calc(100% - var(--NavHeight));
+        min-height: calc(100vh - var(--NavHeight));
         padding: 0 5%;
+        overflow: auto;
     
         .banner {
             position: absolute;
